<resources>
    <string name="app_name">MobileTerminal</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="TableNumber">Номер столика</string>
    <string name="checkout">Оформить заказ</string>
    <string name="back"><![CDATA[<<]]></string>
    <string name="del">X</string>
    <string name="info">\?</string>

</resources>
