<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tokin.mobileterminal.activity.MainActivityWaiter">

    <Button
        android:id="@+id/checkout"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:layout_marginEnd="16dp"
        android:onClick="checkoutOnClick"
        android:text="@string/checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/TableNumber"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="38dp"
        android:layout_marginBottom="192dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="onClickBack"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="270dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/tableOrder"
            android:layout_width="368dp"
            android:layout_height="305dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/firstRow"
                android:background="#b0b0b0">

                <TextView
                    android:id="@+id/col1"
                    android:layout_width="match_parent"
                    android:layout_weight="5"
                    android:text="Блюдо" />

                <TextView
                    android:id="@+id/col2"
                    android:layout_width="match_parent"
                    android:layout_weight="3"
                    android:text="Цена" />

                <TextView
                    android:id="@+id/col3"
                    android:layout_width="match_parent"
                    android:layout_weight="2"
                    android:text="Кол-во" />

                <TextView
                    android:id="@+id/col4"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="" />

            </TableRow>
        </TableLayout>

    </ScrollView>

    <ScrollView
        android:layout_width="373dp"
        android:layout_height="196dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:alignContent="center"
            app:alignItems="center"
            app:flexWrap="wrap"
            app:justifyContent="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </com.google.android.flexbox.FlexboxLayout>
    </ScrollView>

    <GridView
        android:id="@+id/listCat"
        android:layout_width="318dp"
        android:layout_height="202dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>